services/minio/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: minio-no-compression
  namespace: minio
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: minio-s3
